# Parallel_Course_PROJ

./: .gitignore  CMakeLists.txt  cmd.txt
doc/: .~lock.Intel-SSE-指令集整理.docx#  Intel-SSE-指令集整理.docx
src/: CMakeLists.txt  main.cpp
src/class_hw/: CMakeLists.txt  mystring.cpp  mystring.hpp  mystring_main.cpp
src/comm/: CMakeLists.txt  client.cpp  comm_manager.cpp  comm_manager.hpp  server.cpp
src/hello/: CMakeLists.txt  hello_cuda.cu  hello_omp.cpp
src/max/: CMakeLists.txt  max.cpp  max.hpp  max_cuda.cu  max_cuda.cuh  max_main.cpp
src/sort/: CMakeLists.txt  sort.cpp  sort.hpp  sort_cuda.cu  sort_cuda.cuh  sort_main.cpp
src/sum/: CMakeLists.txt  sum.cpp  sum.hpp  sum_cuda.cu  sum_cuda.cuh  sum_main.cpp
src/utils/: CMakeLists.txt  common.cpp  common.cu  common.cuh  common.hpp  metric.cpp  metric.h
